# hipaa-scanner

./: .env.example  .gitignore
.github/workflows/: build-agent.yml
agent/: hipaa_agent.spec  main.py  requirements.txt
backend/: requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/middleware/: audit.py
deploy/: ecosystem.config.js  nginx.conf  server-setup.sh
docs/: ARCHITECT-BRIEF-2026-04-03.md  ARCHITECTURE-2026-04-03.md  CODEBASE-ANALYSIS-2026-04-03.md  HIPAA-RESEARCH-2026-04-03.md  PM-BRIEF-2026-04-03.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
reports/templates/: executive.html  technical.html
scanner/: pyproject.toml
scanner/hipaa_scanner/: __init__.py  cli.py  credentials.py  engine.py  models.py  scoring.py  uploader.py
scanner/hipaa_scanner/checks/: __init__.py  access_controls.py  administrative_safeguards.py  antivirus.py  audit_controls.py  backup_checks.py  base.py  browser_applocker.py  certificate_checks.py  database_security.py  email_security.py  encryption.py  endpoint_advanced.py  group_policy_checks.py  linux_advanced_checks.py  linux_checks.py  logging_siem.py  mfa_checks.py  network_hardening.py  network_security.py  patch_management.py  phi_advanced_checks.py  phi_detection.py  physical_safeguards.py  privileged_access.py  remote_access_checks.py  usb_checks.py  vpn_wireless.py  windows_advanced_checks.py
scanner/hipaa_scanner/connectors/: __init__.py  ldap_connector.py  ssh_connector.py  winrm_connector.py
(+24 files in other folders)
